# Ray-Tracing

./: Algebra.cpp  Algebra.h  CMakeLists.txt  CameraHandler.cpp  CameraHandler.h  LICENSE  Ray.cpp  Ray.h  SceneHandler.cpp  SceneHandler.h  World.cpp  parser.cpp  parser.h  raytracer.cpp
